[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = "3.3"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }


