[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MongoDB driver
mongodb = "3.3"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For async MongoDB cursors (StreamExt)
futures = "0.3"

# HTTP middleware (CORS support)
tower-http = { version = "0.4", features = ["cors"] }
